# Homework-2

fruit_classifier/: README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
fruit_classifier/.tmp_dagster_home_egh9qu11/history/: runs.db
fruit_classifier/.tmp_dagster_home_egh9qu11/history/runs/: index.db
fruit_classifier/.tmp_dagster_home_egh9qu11/schedules/: schedules.db
fruit_classifier/.tmp_dagster_home_rddq8cx6/history/: runs.db
fruit_classifier/.tmp_dagster_home_rddq8cx6/history/runs/: index.db
fruit_classifier/.tmp_dagster_home_rddq8cx6/schedules/: schedules.db
fruit_classifier/cache/history/: runs.db
fruit_classifier/cache/history/runs/: 0174afa9-6fe5-40aa-bf44-4f6cf01d31dd.db  1177978b-8a58-49fd-86fc-8339236ed92c.db  11e6753c-317e-4039-9500-3b8130d60da2.db  12721c27-925c-4ed5-8ed8-b34e585339e6.db  3a994400-4f91-458c-a44a-8a523df5d595.db  3cf33b78-e002-4659-b1f2-91a4a8bad8cb.db  50848d41-cba1-4270-81ac-04c647244179.db  52163a01-d44d-49d6-a475-938a4304fce4.db  5ce73f0f-56d4-412a-b8d2-a6768c2b1772.db  index.db  (+15 more)
fruit_classifier/cache/schedules/: schedules.db
fruit_classifier/cache/storage/: extract_data  metrics  model  preprocess_raw_data  test_data  training_data
fruit_classifier/fruit_classifier/: assets.py  definitions.py
fruit_classifier/models/: model.joblib
fruit_classifier/reports/: metrics.json
fruit_classifier/src/data/: load_data.py  preprocess.py
fruit_classifier/src/models/: evaluate_model.py  predict.py  train_model.py
fruit_classifier/src/templates/: prediction_form.html  prediction_result.html
