[project]
name = "fruit_classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagit>=1.10.4",
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "fruit_classifier.definitions"
code_location_name = "fruit_classifier"

[tool.setuptools.packages.find]
exclude=["fruit_classifier_tests"]
